[project]
name = "ghas-cli"
version = "1.7.3"
description = "Command line interface to interact with GitHub Advanced Security."
authors = [{name="jboursier", email="jboursier@malwarebytes.com"}]
license = "MIT"
readme = "README.md"
keywords = ["security", "cli", "github", "utility"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.8",
    "configparser>=7.1.0",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/Malwarebytes/ghas-cli"
Issues = "https://github.com/Malwarebytes/ghas-cli/issues"
Documentation = "https://github.com/Malwarebytes/ghas-cli/wiki"
Repository = "https://github.com/Malwarebytes/ghas-cli"
Changelog = "https://github.com/Malwarebytes/ghas-cli/releases"
funding = "https://www.malwarebytes.com/"


[project.optional-dependencies]
dev = [
    "ruff>=0.11.2"
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend.data]
data = "templates"

[project.scripts]
ghas-cli = "cli:main"

[tool.ruff.lint]
# isort
select = ["I"]
